force-app/main/default/objects/Building__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <description>Type of Building</description>
    <label>Asset Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>House</fullName>
            </value>
            <value>
                <fullName>Garage</fullName>
            </value>
            <value>
                <fullName>Shed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>