force-app/main/default/objects/Building__c/fields/Builder__c.field-meta.xml
<CustomField>
    <fullName>Builder__c</fullName>
    <description>Builder that constructed the building</description>
    <label>Builder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>