force-app/main/default/objects/Building__c/fields/Electrical_System__c.field-meta.xml
<CustomField>
    <fullName>Electrical_System__c</fullName>
    <description>Type of Electrical</description>
    <label>Electrical System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100 Amp Service</fullName>
            </value>
            <value>
                <fullName>200 Amp Service</fullName>
            </value>
            <value>
                <fullName>400 Amp Service</fullName>
            </value>
            <value>
                <fullName>Sub-Panel</fullName>
            </value>
            <value>
                <fullName>Dedicated Fuse(s)</fullName>
            </value>
            <value>
                <fullName>Self-Contained (Green) System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>