force-app/main/default/objects/Building__c/fields/Sewer__c.field-meta.xml
<CustomField>
    <fullName>Sewer__c</fullName>
    <description>Sewer System</description>
    <label>Sewer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Municipal Sewer</fullName>
            </value>
            <value>
                <fullName>Septic Tank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>