force-app/main/default/objects/Building__c/fields/Water_System__c.field-meta.xml
<CustomField>
    <fullName>Water_System__c</fullName>
    <description>Type of Water System Building Uses</description>
    <label>Water System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Municipal Water</fullName>
            </value>
            <value>
                <fullName>Well</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>